syntax = "proto2";
package msg;
import "chat.core.types.proto";
import "chat.api.messages.proto";
import "chat.core.message.medias.proto";

// ClientPendingMessage
message ClientPendingMessage {
    required int64 ID = 1;
    required int64 RequestID = 2;
    required int64 PeerID = 3;
    required int32 PeerType = 4;
    required fixed64 AccessHash = 5;
    required int64 CreatedOn = 6;
    required int64 ReplyTo = 7;
    required string Body = 8;
    required int64 SenderID = 9 ;
    repeated MessageEntity Entities = 10;
    optional InputMediaType MediaType = 11;
    optional bytes Media = 12;
}

// ClientSendMessageMedia
message ClientSendMessageMedia {
    required InputPeer Peer = 1;
    required InputMediaType MediaType = 2;
    optional string Caption = 3;
    optional string FileName = 4;
    optional string FilePath = 5;
    optional string ThumbFilePath = 6;
    optional string FileMIME = 7;
    optional string ThumbMIME = 8;
    optional int64 ReplyTo = 9;
    optional bool ClearDraft = 10;
    repeated DocumentAttribute Attributes = 11;
}